<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>consai</name>
  <version>0.1.0</version>
  <description>Meta package that contains all essential packages of CON-SAI</description>
  <maintainer email="macakasit@gmail.com">shotaak</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <url type="website">https://ssl-roots.github.io/Roots_home/</url>
  <url type="repository">https://github.com/SSL-Roots/consai_ros2</url>
  <url type="bugtracker">https://github.com/SSL-Roots/consai_ros2/issues</url>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
